# gqlmapi-server-proto

./: .gitmodules  CMakeLists.txt  LICENSE
src/: App.cpp  AppComponents.h
src/asset/: graphiql.html
src/controller/: GqlQueryController.cpp  GqlQueryController.h
src/dto/: GqlRequest.h  GqlResponse.h
src/graphql/: MapiResolver.cpp  MapiResolver.h
src/graphql/public/: IResolver.h
src/resolver/: IResolver.h  MapiResolver.cpp  MapiResolver.h
src/transport/http/: GqlQueryController.cpp  GqlQueryController.h
src/transport/schema/: GqlRequest.h  GqlResponse.h  GqlSubscriptionMessage.h
src/transport/subscription/: SubscriptionMessageListener.cpp  SubscriptionMessageListener.h
src/transport/websocket/: IMessageDispatcher.h  IMessageListener.h  WSConnectionListener.cpp  WSConnectionListener.h  WSFrameListener.cpp  WSFrameListener.h  WSMessageDispatcher.cpp  WSMessageDispatcher.h
